# vanish.myself

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: job_queue.cpp  job_queue.h  main.cpp  storage.cpp  storage.h
ui/: index.htm  style.css
